--- a/tests/webui-docker-compose.yml
+++ b/tests/webui-docker-compose.yml
@@ -50,6 +50,7 @@ services:
       - $HOME/test-container-cache-${CONTAINER_NAME}/dot-cache:/root/.cache
       - /share_nfs:/share_nfs:ro
       - /share_nfs/onediff_ci/sd-webui/images:/share_nfs/onediff_ci/sd-webui/images:rw
+      - ${REFINER_BASE}:/app/${WEBUI_SRC_DIR}/models/Stable-diffusion:ro
       - ${PWD}/${WEBUI_SRC_DIR}:/app/${WEBUI_SRC_DIR}
       - ${PWD}/onediff_sd_webui_extensions:/app/${WEBUI_SRC_DIR}/extensions/onediff_sd_webui_extensions
       - $PWD:/src/onediff
