--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,4 @@ unet_graphs
 
 # onediff_sd_webui_extensions
 onediff_sd_webui_extensions/compiled_caches/
+onediff_comfy_nodes/benchmarks/results/
