--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -343,6 +343,14 @@ jobs:
           docker exec -e ONEFLOW_MLIR_ENABLE_INFERENCE_OPTIMIZATION=0 ${{ env.CONTAINER_NAME }} python3 -m pytest -v onediff_diffusers_extensions/tests/test_lora.py
       # - if: matrix.test-suite == 'diffusers_examples'
       #   run: docker exec -w /src/onediff/onediff_diffusers_extensions -e ONEFLOW_MLIR_ENABLE_INFERENCE_OPTIMIZATION=0 ${{ env.CONTAINER_NAME }} python3 examples/text_to_image_sdxl_reuse_pipe.py --base /share_nfs/hf_models/stable-diffusion-xl-base-1.0 --new_base /share_nfs/hf_models/dataautogpt3-OpenDalleV1.1
+      ##### the following is inference time test
+      - if: matrix.test-suite == 'diffusers_examples'
+        run: docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-v1-5
+      - if: matrix.test-suite == 'diffusers_examples'
+        run: docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-2-1
+      - if: matrix.test-suite == 'diffusers_examples'
+        run: docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-xl-base-1.0
+      #### the above is inference time test
       - if: matrix.test-suite == 'diffusers_examples' && startsWith(matrix.image, 'onediff-pro')
         run: |
           docker exec -w /src/onediff ${{ env.CONTAINER_NAME }} python3 onediff_diffusers_extensions/examples/text_to_image_sd_enterprise.py  --model /share_nfs/hf_models/stable-diffusion-v1-5-int8 --width 512 --height 512 --saved_image /src/onediff/output_enterprise_sd.png
