--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -19,6 +19,7 @@ env:
   WEBUI_DEPENDENCIES_SUBDIR: repos
   SDXL_BASE: /share_nfs/hf_models/sd_xl_base_1.0.safetensors
   REFINER_BASE: /share_nfs/onediff_ci/sd-webui/safetensors/sd_xl_refiner_1.0.safetensors
+  AWPAINTING_BASE: /share_nfs/onediff_ci/sd-webui/safetensors/AWPainting_v1.2.safetensors
   UNET_INT8: /share_nfs/hf_models/unet_int8
   CONTROL_LORA_OPENPOSEXL2_RANK256: /share_nfs/hf_models/controlnet/control-lora-openposeXL2-rank256.safetensors
   SELENIUM_CONTAINER_NAME: selenium-test
@@ -382,7 +383,8 @@ jobs:
         run: docker exec ${{ env.CONTAINER_NAME }} python3 -m pytest -v -s tests/sd-webui/test_api.py
         env:
           REFINER_BASE: ${{ env.REFINER_BASE }}
-
+          AWPAINTING_BASE: ${{ env.AWPAINTING_BASE }}
+          SDXL_BASE: ${{ env.SDXL_BASE }}
       - name: Show WebUI Log
         if: matrix.test-suite == 'webui'
         run: docker exec ${{ env.CONTAINER_NAME }} cat /app/${{ env.WEBUI_SRC_DIR }}/onediff_webui.log
