--- a/tests/comfyui/extra_model_paths.yaml
+++ b/tests/comfyui/extra_model_paths.yaml
@@ -8,7 +8,7 @@ comfyui:
     base_path: /app/ComfyUI
     # checkpoints: /home/fengwen/workspace/test_checkpoints
     checkpoints: /share_nfs/hf_models/comfyui_resources/checkpoints
-    clip: models/clip/
+    clip: /share_nfs/hf_models/comfyui_resources//models/clip/
     clip_vision: /share_nfs/hf_models/comfyui_resources/clip_vision
     configs: models/configs/
     controlnet: models/controlnet/
