--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -345,14 +345,6 @@ jobs:
           docker exec -e ONEFLOW_MLIR_ENABLE_INFERENCE_OPTIMIZATION=0 ${{ env.CONTAINER_NAME }} python3 -m pytest -v onediff_diffusers_extensions/tests/test_lora.py --disable-warnings
       # - if: matrix.test-suite == 'diffusers_examples'
       #   run: docker exec -w /src/onediff/onediff_diffusers_extensions -e ONEFLOW_MLIR_ENABLE_INFERENCE_OPTIMIZATION=0 ${{ env.CONTAINER_NAME }} python3 examples/text_to_image_sdxl_reuse_pipe.py --base /share_nfs/hf_models/stable-diffusion-xl-base-1.0 --new_base /share_nfs/hf_models/dataautogpt3-OpenDalleV1.1
-      # ------------- the following is inference time test -------------
-      - if: matrix.test-suite == 'diffusers_examples'
-        run: docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-v1-5
-      - if: matrix.test-suite == 'diffusers_examples'
-        run: docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-2-1
-      - if: matrix.test-suite == 'diffusers_examples'
-        run: docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-xl-base-1.0
-      # ------------- the above is inference time test ----------------
       - if: matrix.test-suite == 'diffusers_examples' && startsWith(matrix.image, 'onediff-pro')
         run: |
           docker exec -w /src/onediff ${{ env.CONTAINER_NAME }} python3 onediff_diffusers_extensions/examples/text_to_image_sd_enterprise.py  --model /share_nfs/hf_models/stable-diffusion-v1-5-int8 --width 512 --height 512 --saved_image /src/onediff/output_enterprise_sd.png
@@ -433,4 +425,62 @@ jobs:
           WEBUI_SRC_DIR: ${{ env.WEBUI_SRC_DIR }}
           SELENIUM_IMAGE: ${{ env.SELENIUM_IMAGE }}
           SELENIUM_CONTAINER_NAME: ${{ env.SELENIUM_CONTAINER_NAME }}
+          SILICON_ONEDIFF_LICENSE_KEY: ${{ secrets.SILICON_ONEDIFF_LICENSE_KEY }}
+
+  benchmark-test:
+    name: "benchmark benchmark-community-default:v1_864"
+    runs-on: [self-hosted, cuda]
+    needs: [upload_src]
+    steps:
+      - name: Login to ACR with the AccessKey pair
+        uses: aliyun/acr-login@v1
+        with:
+          login-server: https://registry.${{env.REGION_ID}}.aliyuncs.com
+          username: "${{ secrets.ACR_USERNAME }}"
+          password: "${{ secrets.ACR_PASSWORD }}"
+      - name: Fix permissions
+        run: |
+          set -x
+          docker run --rm -v $PWD:$PWD -w $PWD busybox rm -rf *
+      - name: Setup ossutil
+        if: github.repository == 'siliconflow/onediff'
+        run: |
+          if [ ! -f "$HOME/ossutil64" ]; then
+            curl http://gosspublic.alicdn.com/ossutil/1.7.15/ossutil64 -o $HOME/ossutil64
+            chmod +x $HOME/ossutil64
+          fi
+          $HOME/ossutil64 config -e oss-cn-beijing.aliyuncs.com -i ${{ secrets.OSS_ACCESS_KEY_ID }} -k ${{ secrets.OSS_ACCESS_KEY_SECRET }}  -L EN -c $HOME/.ossutilconfig
+      - name: Checkout vis OSS
+        if: github.repository == 'siliconflow/onediff'
+        run: |
+          $HOME/ossutil64 cp ${{ needs.upload_src.outputs.onediff_src_url }} .
+          unzip -o $(basename ${{ needs.upload_src.outputs.onediff_src_url }})
+      - name: Checkout
+        if: github.repository != 'siliconflow/onediff'
+        uses: actions/checkout@v4
+      - name: Clean docker containers
+        run: |
+          docker rm -f ${{ env.CONTAINER_NAME }} || true
+          docker rm -f ${{ env.SELENIUM_CONTAINER_NAME }} || true
+      - run: docker image prune -f
+      - run: |
+          docker pull ${{ env.ACR_ORG }}/benchmark-community-default:v1_864
+      # - run: docker image prune -f
+      - name: Setup docker for benchmark test
+        run: |
+          env
+          docker compose -f benchmarks/benchmark-docker-compose.yml up -d
+      - name: Run benchmark test for stable-diffusion-v1-5
+        run: |
+          docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-v1-5
+      - name: Run benchmark test for stable-diffusion-2-1
+        run: |
+          docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-2-1
+      - name: Run benchmark test for stable-diffusion-xl-base-1.0
+        run: |
+          docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-xl-base-1.0
+        env:
+          CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
+          ACR_ORG: ${{ env.ACR_ORG }}
+          BENCHMARK_IMAGE: benchmark-community-default:v1_864
           SILICON_ONEDIFF_LICENSE_KEY: ${{ secrets.SILICON_ONEDIFF_LICENSE_KEY }}
