--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -428,7 +428,7 @@ jobs:
           SILICON_ONEDIFF_LICENSE_KEY: ${{ secrets.SILICON_ONEDIFF_LICENSE_KEY }}
 
   benchmark-test:
-    name: "benchmark benchmark-community-default:v1_864"
+    name: "benchmark-community-default:v1_864"
     runs-on: [self-hosted, cuda]
     needs: [upload_src]
     steps:
@@ -482,5 +482,5 @@ jobs:
         env:
           CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
           ACR_ORG: ${{ env.ACR_ORG }}
-          BENCHMARK_IMAGE: benchmark-community-default:v1_864
+          BENCHMARK_IMAGE: registry.cn-beijing.aliyuncs.com/oneflow/benchmark-community-default:v1_864
           SILICON_ONEDIFF_LICENSE_KEY: ${{ secrets.SILICON_ONEDIFF_LICENSE_KEY }}
