--- a/benchmarks/benchmark-docker-compose.yml
+++ b/benchmarks/benchmark-docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   onediff-test:
     container_name: ${CONTAINER_NAME}
-    image: ${ACR_ORG}/${BENCHMARK_IMAGE}
+    image: registry.cn-beijing.aliyuncs.com/oneflow/benchmark-community-default:v1_864
     command: sleep 5400
     privileged: true
     shm_size: 8g
