--- a/tests/comfyui/extra_model_paths.yaml
+++ b/tests/comfyui/extra_model_paths.yaml
@@ -8,6 +8,7 @@ comfyui:
     base_path: /app/ComfyUI
     # checkpoints: /home/fengwen/workspace/test_checkpoints
     checkpoints: /share_nfs/hf_models/comfyui_resources/checkpoints
+    unet: /share_nfs/hf_models/comfyui_resources/unet
     clip: /share_nfs/hf_models/comfyui_resources//models/clip/
     clip_vision: /share_nfs/hf_models/comfyui_resources/clip_vision
     configs: models/configs/
@@ -17,6 +18,8 @@ comfyui:
     upscale_models: models/upscale_models/
     vae: models/vae/
     ipadapter: /share_nfs/hf_models/comfyui_resources/ipadapter
+    pulid: /share_nfs/hf_models/comfyui_resources/pulid
+    insightfac: /share_nfs/hf_models/comfyui_resources/insightfac
 
 #other_ui:
 #    base_path: path/to/ui
