--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -471,6 +471,8 @@ jobs:
           env
           docker compose -f benchmarks/benchmark-docker-compose.yml up -d
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip uninstall -y transformer-engine
+          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install -e .
+          docker exec ${{ env.CONTAINER_NAME }} cd onediff_diffusers_extensions && python3 -m pip install -e .
         env:
           CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
           ACR_ORG: ${{ env.ACR_ORG }}
