--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -472,7 +472,7 @@ jobs:
           docker compose -f benchmarks/benchmark-docker-compose.yml up -d
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip uninstall -y transformer-engine
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install -e .
-          docker exec ${{ env.CONTAINER_NAME }} cd onediff_diffusers_extensions && python3 -m pip install -e .
+          docker exec ${{ env.CONTAINER_NAME }} bash -c "cd onediff_diffusers_extensions && python3 -m pip install -e ."
         env:
           CONTAINER_NAME: ${{ env.CONTAINER_NAME }}
           ACR_ORG: ${{ env.ACR_ORG }}
