--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -469,6 +469,7 @@ jobs:
       - name: Setup docker for benchmark test
         run: |
           env
+          nvidia-smi
           docker compose -f benchmarks/benchmark-docker-compose.yml up -d
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip uninstall -y transformer-engine
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install -e .
@@ -478,9 +479,9 @@ jobs:
           ACR_ORG: ${{ env.ACR_ORG }}
           BENCHMARK_IMAGE: registry.cn-beijing.aliyuncs.com/oneflow/benchmark-community-default:v1_864
           SILICON_ONEDIFF_LICENSE_KEY: ${{ secrets.SILICON_ONEDIFF_LICENSE_KEY }}
-      - name: Run benchmark test for stable-diffusion-xl-base-1.0
-        run: |
-            docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-xl-base-1.0  
+      # - name: Run benchmark test for stable-diffusion-xl-base-1.0
+      #   run: |
+      #       docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-xl-base-1.0  
       - name: Run benchmark test for stable-diffusion-v1-5
         run: |
           docker exec -w /src/onediff/benchmarks ${{ env.CONTAINER_NAME }} python3 test_sd_benchmarks.py --model_dir /share_nfs/hf_models --model_name stable-diffusion-v1-5
