--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -305,7 +305,7 @@ jobs:
           # run_comfy_test "/share_nfs/hf_models/comfyui_resources/workflows/deep-cache.json" 600
           # run_comfy_test "/share_nfs/hf_models/comfyui_resources/workflows/deep-cache-with-lora.json" 800
           # run_comfy_test "workflows/text-to-video-speedup.json" 5000
-          docker exec -w /src/onediff/onediff_comfy_nodes/benchmarks ${{ env.CONTAINER_NAME }} bash scripts/install_env.sh
+          docker exec -w /src/onediff/onediff_comfy_nodes/benchmarks ${{ env.CONTAINER_NAME }} bash scripts/install_env.sh /app/ComfyUI
           docker exec -w /src/onediff/onediff_comfy_nodes/benchmarks ${{ env.CONTAINER_NAME }} bash scripts/run_oneflow_case.sh
 
 
