--- a/tests/comfyui/extra_model_paths.yaml
+++ b/tests/comfyui/extra_model_paths.yaml
@@ -12,7 +12,7 @@ comfyui:
     clip: /share_nfs/hf_models/comfyui_resources//models/clip/
     clip_vision: /share_nfs/hf_models/comfyui_resources/clip_vision
     configs: models/configs/
-    controlnet: models/controlnet/
+    controlnet: /share_nfs/hf_models/comfyui_resources/controlnet/
     embeddings: models/embeddings/
     loras: /share_nfs/hf_models/comfyui_resources/loras/
     upscale_models: models/upscale_models/
