--- a/tests/comfy-docker-compose.yml
+++ b/tests/comfy-docker-compose.yml
@@ -24,9 +24,10 @@ services:
       - seccomp=unconfined
     environment:
       HF_HUB_OFFLINE: "1"
-      ONEFLOW_MLIR_ENABLE_TIMING: "0"
-      ONEFLOW_MLIR_PRINT_STATS: "0"
+      ONEFLOW_MLIR_ENABLE_TIMING: "1"
+      ONEFLOW_MLIR_PRINT_STATS: "1"
       ONEFLOW_MLIR_ENABLE_INFERENCE_OPTIMIZATION: "0"
+      COMFYUI_ONEDIFF_SAVE_GRAPH_DIR: "/share_nfs/hf_models/comfyui_resources/input"
       CI: "1"
       SILICON_ONEDIFF_LICENSE_KEY: ${SILICON_ONEDIFF_LICENSE_KEY}
     volumes:
