--- a/tests/comfyui/extra_model_paths.yaml
+++ b/tests/comfyui/extra_model_paths.yaml
@@ -8,15 +8,18 @@ comfyui:
     base_path: /app/ComfyUI
     # checkpoints: /home/fengwen/workspace/test_checkpoints
     checkpoints: /share_nfs/hf_models/comfyui_resources/checkpoints
-    clip: models/clip/
+    unet: /share_nfs/hf_models/comfyui_resources/unet
+    clip: /share_nfs/hf_models/comfyui_resources/clip
     clip_vision: /share_nfs/hf_models/comfyui_resources/clip_vision
     configs: models/configs/
-    controlnet: models/controlnet/
+    controlnet: /share_nfs/hf_models/comfyui_resources/controlnet
     embeddings: models/embeddings/
-    loras: /share_nfs/hf_models/comfyui_resources/loras/
+    loras: /share_nfs/hf_models/comfyui_resources/loras
     upscale_models: models/upscale_models/
     vae: models/vae/
     ipadapter: /share_nfs/hf_models/comfyui_resources/ipadapter
+    pulid: /share_nfs/hf_models/comfyui_resources/pulid
+    insightfac: /share_nfs/hf_models/comfyui_resources/insightfac
 
 #other_ui:
 #    base_path: path/to/ui
