--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 # pyproject.toml
 
-# pip install black==19.10b0
+# pip install black==22.3.0
 # black --config pyproject.toml file
 [tool.black]
 line-length = 88
