--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -171,7 +171,7 @@ jobs:
       - name: Fix permissions
         run: |
           set -x
-          docker run --rm -v $PWD:$PWD -w $PWD busybox rm -rf *
+          docker run --rm -v $PWD:$PWD -w $PWD busybox rm -rf .[^.]* *
       - name: Setup ossutil
         if: github.event.pull_request.head.repo.full_name == github.repository
         run: |
