--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -153,7 +153,7 @@ jobs:
         if: github.event.pull_request.head.repo.full_name != github.repository
         with:
           name: onediff_src_pkg
-          path: */*.zip
+          path: ${{ github.workspace }}/*/*.zip
 
   run-examples:
     name: " ${{ matrix.test-suite }} ${{ matrix.image }}"
