--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -157,7 +157,7 @@ jobs:
         if: github.event.pull_request.head.repo.full_name != github.repository
         with:
           name: onediff_src_pkg
-          path: */*-src.zip
+          path: "*/*-src.zip"
           compression-level: 9
 
   run-examples:
