--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -161,6 +161,7 @@ jobs:
           path: |
             onediff
             ComfyUI
+            ${{ env.WEBUI_SRC_DIR }}
           compression-level: 9
 
   valiad-src-pkg:
@@ -176,12 +177,16 @@ jobs:
         run: |
           mv onediff/* ${{ github.workspace }}
           mv ComfyUI ${{ github.workspace }}/ComfyUI
+          mv ${{env.WEBUI_SRC_DIR}} ${{ github.workspace }}/${{env.WEBUI_SRC_DIR}}
       - name: Print src
         run: |
           ls -al
       - name: Print ComfyUI
         run: |
           ls -al ComfyUI
+      - name: Print ${{env.WEBUI_SRC_DIR}}
+        run: |
+          ls -al ${{env.WEBUI_SRC_DIR}}
 
   run-examples:
     name: " ${{ matrix.test-suite }} ${{ matrix.image }}"
@@ -250,6 +255,7 @@ jobs:
         run: |
           mv onediff/* ${{ github.workspace }}
           mv ComfyUI ${{ github.workspace }}/ComfyUI
+          mv ${{env.WEBUI_SRC_DIR}} ${{ github.workspace }}/${{env.WEBUI_SRC_DIR}}
       - name: Clean docker containers
         run: |
           docker rm -f ${{ env.CONTAINER_NAME }} || true
