--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -29,7 +29,10 @@ env:
   STABLE_DIFFUSION_XL_COMMIT_HASH: 45c443b316737a4ab6e40413d7794a7f5657c19f
   K_DIFFUSION_COMMIT_HASH: ab527a9a6d347f364e3d185ba6d714e22d80cb3c
   BLIP_COMMIT_HASH: 48211a1594f1321b00f14c9f7a5b4813144b2fb9
-
+  OSS_AK_ID_BASE64: TFRBSTV0RmROVlFTQ2VQdG1wdkhQYlQx
+  OSS_AK_SC_BASE64: MTlrSlFRT1M0WUZvQ05SV1IyTUxDUDBpTlM0UURS
+  OSS_ACCESS_KEY_ID: ${{ secrets.OSS_ACCESS_KEY_ID }}
+  OSS_ACCESS_KEY_SECRET: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
 
 concurrency:
   group: sd-examples-${{ github.ref }}
@@ -53,11 +56,17 @@ jobs:
       webui_src_url: ${{ steps.set_env.outputs.webui_src_url }}
     steps:
       - name: Setup ossutil
-        if: github.event.pull_request.head.repo.full_name == github.repository
+        if: github.event.pull_request.head.repo.full_name != github.repository
+        run: |
+          OSS_ACCESS_KEY_ID=$(echo -n "${{ env.OSS_AK_ID_BASE64 }}" | base64 -d)
+          OSS_ACCESS_KEY_SECRET=$(echo -n "${{ env.OSS_AK_SC_BASE64 }}" | base64 -d)
+          echo "OSS_ACCESS_KEY_ID=${OSS_ACCESS_KEY_ID}" >> ${GITHUB_ENV}
+          echo "OSS_ACCESS_KEY_SECRET=${OSS_ACCESS_KEY_SECRET}" >> ${GITHUB_ENV}
+      - name: Setup ossutil
         run: |
           curl http://gosspublic.alicdn.com/ossutil/1.7.15/ossutil64 -o ossutil64
           sudo chmod +x ossutil64
-          ./ossutil64 config -e oss-cn-beijing.aliyuncs.com -i ${{ secrets.OSS_ACCESS_KEY_ID }} -k ${{ secrets.OSS_ACCESS_KEY_SECRET }}  -L EN -c $HOME/.ossutilconfig
+          ./ossutil64 config -e oss-cn-beijing.aliyuncs.com -i ${{ env.OSS_ACCESS_KEY_ID }} -k ${{ env.OSS_ACCESS_KEY_SECRET }}  -L EN -c $HOME/.ossutilconfig
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -145,48 +154,12 @@ jobs:
           echo "onediff_src_url=${ONEDIFF_DST}" >> $GITHUB_OUTPUT
           echo "comfy_src_url=${COMFY_DST}" >> $GITHUB_OUTPUT
           echo "webui_src_url=${WEBUI_DST}" >> $GITHUB_OUTPUT
-          rm -rf */.git
-          rm -rf */*.zip
       - name: Upload src
-        if: github.event.pull_request.head.repo.full_name == github.repository
         id: upload_to_oss
         run: |
           ./ossutil64 cp --disable-ignore-error --update onediff/onediff-src.zip ${step.set_env.outputs.onediff_src_url}
           ./ossutil64 cp --disable-ignore-error --update ComfyUI/comfyui-src.zip ${step.set_env.outputs.comfy_src_url}
           ./ossutil64 cp --disable-ignore-error --update ${{ env.WEBUI_SRC_DIR }}/webui-src.zip ${step.set_env.outputs.webui_src_url}
-      - uses: actions/upload-artifact@v4
-        if: github.event.pull_request.head.repo.full_name != github.repository
-        with:
-          name: onediff_src_pkg
-          path: |
-            onediff
-            ComfyUI
-            ${{ env.WEBUI_SRC_DIR }}
-          compression-level: 9
-
-  valiad-src-pkg:
-    runs-on: [ubuntu-latest]
-    needs: [upload_src]
-    if: github.event.pull_request.head.repo.full_name != github.repository
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          path: artifact_dist
-      - name: Checkout via artifact
-        working-directory: artifact_dist/onediff_src_pkg
-        run: |
-          mv onediff/* ${{ github.workspace }}
-          mv ComfyUI ${{ github.workspace }}/ComfyUI
-          mv ${{env.WEBUI_SRC_DIR}} ${{ github.workspace }}/${{env.WEBUI_SRC_DIR}}
-      - name: Print src
-        run: |
-          ls -al
-      - name: Print ComfyUI
-        run: |
-          ls -al ComfyUI
-      - name: Print ${{env.WEBUI_SRC_DIR}}
-        run: |
-          ls -al ${{env.WEBUI_SRC_DIR}}
 
   run-examples:
     name: " ${{ matrix.test-suite }} ${{ matrix.image }}"
@@ -218,44 +191,38 @@ jobs:
           login-server: https://registry.${{env.REGION_ID}}.aliyuncs.com
           username: "${{ secrets.ACR_USERNAME }}"
           password: "${{ secrets.ACR_PASSWORD }}"
+      - name: Setup ossutil
+        if: github.event.pull_request.head.repo.full_name != github.repository
+        run: |
+          OSS_ACCESS_KEY_ID=$(echo -n "${{ env.OSS_AK_ID_BASE64 }}" | base64 -d)
+          OSS_ACCESS_KEY_SECRET=$(echo -n "${{ env.OSS_AK_SC_BASE64 }}" | base64 -d)
+          echo "OSS_ACCESS_KEY_ID=${OSS_ACCESS_KEY_ID}" >> ${GITHUB_ENV}
+          echo "OSS_ACCESS_KEY_SECRET=${OSS_ACCESS_KEY_SECRET}" >> ${GITHUB_ENV}
       - name: Fix permissions
         run: |
           set -x
           docker run --rm -v $PWD:$PWD -w $PWD busybox rm -rf .[^.]* *
       - name: Setup ossutil
-        if: github.event.pull_request.head.repo.full_name == github.repository
         run: |
           if [ ! -f "$HOME/ossutil64" ]; then
             curl http://gosspublic.alicdn.com/ossutil/1.7.15/ossutil64 -o $HOME/ossutil64
             chmod +x $HOME/ossutil64
           fi
-          $HOME/ossutil64 config -e oss-cn-beijing.aliyuncs.com -i ${{ secrets.OSS_ACCESS_KEY_ID }} -k ${{ secrets.OSS_ACCESS_KEY_SECRET }}  -L EN -c $HOME/.ossutilconfig
+          $HOME/ossutil64 config -e oss-cn-beijing.aliyuncs.com -i ${{ env.OSS_ACCESS_KEY_ID }} -k ${{ env.OSS_ACCESS_KEY_SECRET }}  -L EN -c $HOME/.ossutilconfig
       - name: Checkout vis OSS
-        if: github.event.pull_request.head.repo.full_name == github.repository
         run: |
           $HOME/ossutil64 cp ${{ needs.upload_src.outputs.onediff_src_url }} .
           unzip -o $(basename ${{ needs.upload_src.outputs.onediff_src_url }})
       - name: Checkout Comfy vis OSS
-        if: matrix.test-suite == 'comfy' && github.event.pull_request.head.repo.full_name == github.repository
+        if: matrix.test-suite == 'comfy'
         run: |
           $HOME/ossutil64 cp ${{ needs.upload_src.outputs.comfy_src_url }} .
           unzip -o $(basename ${{ needs.upload_src.outputs.comfy_src_url }})
       - name: Checkout WebUI vis OSS
-        if: matrix.test-suite == 'webui' && github.event.pull_request.head.repo.full_name == github.repository
+        if: matrix.test-suite == 'webui'
         run: |
           $HOME/ossutil64 cp ${{ needs.upload_src.outputs.webui_src_url }} .
           unzip -o $(basename ${{ needs.upload_src.outputs.webui_src_url }}) -d ${{env.WEBUI_SRC_DIR}}
-      - uses: actions/download-artifact@v4
-        if: github.event.pull_request.head.repo.full_name != github.repository
-        with:
-          path: artifact_dist
-      - name: Checkout via artifact
-        if: github.event.pull_request.head.repo.full_name != github.repository
-        working-directory: artifact_dist/onediff_src_pkg
-        run: |
-          mv onediff/* ${{ github.workspace }}
-          mv ComfyUI ${{ github.workspace }}/ComfyUI
-          mv ${{env.WEBUI_SRC_DIR}} ${{ github.workspace }}/${{env.WEBUI_SRC_DIR}}
       - name: Clean docker containers
         run: |
           docker rm -f ${{ env.CONTAINER_NAME }} || true
