--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,6 @@ unet_graphs
 # onediff_sd_webui_extensions
 onediff_sd_webui_extensions/compiled_caches/
 onediff_comfy_nodes/benchmarks/results/
+
+# setuptools_scm
+_version.py
