--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -18,16 +18,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Get current date
-        id: date
-        run: |
-          sed -i '1d' "src/onediff/__init__.py"
-          sed -i '1d' "onediff_diffusers_extensions/onediffx/__init__.py"
-          formatted_date=$(date +'%Y%m%d%H%M')
-          echo "__version__ = \"1.2.0.dev${formatted_date}\"" >> src/onediff/__init__.py
-          echo "__version__ = \"1.2.0.dev${formatted_date}\"" >> onediff_diffusers_extensions/onediffx/__init__.py
       - run: cat src/onediff/__init__.py
       - run: python3 -m pip install build
+      - name: Set environment variable
+        env:
+          VERSION_LOCAL_SCHEME: no-local-version
+        run: echo "VERSION_LOCAL_SCHEME=$VERSION_LOCAL_SCHEME"
       - run: python3 -m build
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
