--- a/.github/workflows/pub.yml
+++ b/.github/workflows/pub.yml
@@ -30,9 +30,11 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-      - run: |
-          cd ./onediff_diffusers_extensions
-          python3 -m build
+      # - run: |
+      #     cd ./onediff_diffusers_extensions
+      #     python3 -m build
+      - run: python3 -m build
+        working-directory: ./onediff_diffusers_extensions
       - name: Publish extension
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
