--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -295,7 +295,7 @@ jobs:
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install -r tests/comfyui/requirements.txt --user
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install -r ComfyUI/requirements.txt --user
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip uninstall -y transformer-engine
-          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install huggingface-hub==0.25.2
+          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install huggingface-hub==0.25.2 --user
       - name: Print pip package versions
         run: |
           docker exec ${{ env.CONTAINER_NAME }} python3 -m pip list
