--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -283,6 +283,7 @@ jobs:
 
       - run: nvidia-smi
       - run: nvidia-smi -L
+      - run: docker exec ${{ env.CONTAINER_NAME }} python3 -m pip list
       - run: docker exec ${{ env.CONTAINER_NAME }} python3 -m oneflow --doctor
       - run: docker exec ${{ env.CONTAINER_NAME }} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
       - name: Install onediff-quant if needed
