Use 122 and install cupti in pro img (#1156)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **New Features**
- Updated the Dockerfile to include support for the NVIDIA CUDA CUPTI
library version 12, enhancing performance and compatibility.
- Enhanced the README with updated installation instructions for
OneFlow, reflecting the change to CUDA version 12.2, and improved
performance comparisons for various models.
- **Chores**
- Modified the GitHub Actions workflow to update the `ONEFLOW_PIP_INDEX`
environment variable for dynamic versioning of the OneFlow package.
- Updated CI testing workflow to use the new container image version
`onediff-pro:cu122`.
- Added a command to list installed Python packages in the CI testing
workflow for better visibility.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.github/workflows/sd.yml
+++ b/.github/workflows/sd.yml
@@ -40,6 +40,11 @@ jobs:
               suffix: "cu121",
               repo: "onediff-pro",
             }
+          - {
+              BASE_IMAGE: "nvcr.io/nvidia/pytorch:23.08-py3",
+              suffix: "cu122",
+              repo: "onediff-pro",
+            }
 
     env:
       DOCKER_BUILDKIT: 1
@@ -79,7 +84,7 @@ jobs:
       - name: Set env (Pro)
         if: matrix.image.repo == 'onediff-pro'
         run: |
-          echo ONEFLOW_PIP_INDEX="https://${{ secrets.ONEFLOW_PRIV_OSS_BUCKET }}.oss-cn-beijing.aliyuncs.com/branch/main/cu121" >> $GITHUB_ENV
+          echo ONEFLOW_PIP_INDEX="https://${{ secrets.ONEFLOW_PRIV_OSS_BUCKET }}.oss-cn-beijing.aliyuncs.com/branch/main/${{ matrix.image.suffix }}" >> $GITHUB_ENV
       - name: Get OneFlow version
         id: get-oneflow-version
         run: |
