--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -174,14 +174,14 @@ jobs:
           - ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         image:
           - onediff:cu118
-          - onediff-pro:cu121
+          - onediff-pro:cu122
         test-suite:
           - diffusers_examples
           - comfy
           - webui
         exclude:
           - should-run-pro: false
-            image: onediff-pro:cu121
+            image: onediff-pro:cu122
     steps:
       - name: Login to ACR with the AccessKey pair
         if: github.event.pull_request.head.repo.full_name == github.repository
@@ -283,6 +283,7 @@ jobs:
 
       - run: nvidia-smi
       - run: nvidia-smi -L
+      - run: docker exec ${{ env.CONTAINER_NAME }} python3 -m pip list
       - run: docker exec ${{ env.CONTAINER_NAME }} python3 -m oneflow --doctor
       - run: docker exec ${{ env.CONTAINER_NAME }} python3 -m pip config set global.index-url https://pypi.tuna.tsinghua.edu.cn/simple
       - name: Install onediff-quant if needed
