Run pro tests when scheduled (#1154)
<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

- **Chores**
- Updated CI testing workflow to enhance job execution conditions for
pull requests and scheduled events.
- Added a new step for setting up the `ossutil` tool in the upload
process.
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -171,7 +171,7 @@ jobs:
       max-parallel: 5
       matrix:
         should-run-pro:
-          - ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+          - ${{ github.event.pull_request.head.repo.full_name == github.repository || github.event_name == 'schedule' }}
         image:
           - onediff:cu118
           - onediff-pro:cu122
