--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -289,7 +289,7 @@ jobs:
       - name: Install onediff-quant if needed
         if: startsWith(matrix.image, 'onediff-pro')
         run: |
-          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install --pre onediff-quant -f https://oneflow-pro.oss-cn-beijing.aliyuncs.com/onediff-quant/
+          docker exec ${{ env.CONTAINER_NAME }} python3 -m pip install --pre onediff-quant "numpy<2" -f https://oneflow-pro.oss-cn-beijing.aliyuncs.com/onediff-quant/
       - name: Pip Install Requirements for ComfyUI & Test
         if: matrix.test-suite == 'comfy'
         run: |
